# BlackEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DaemonEngine.sln  GenerateProjects.bat  Makefile  README.md  cmake_install.cmake  premake5.lua
.cmake/api/v1/reply/: cache-v2-662e7e7ac0ec8b88f4f9.json  cache-v2-68334d9bb958209006d1.json  cmakeFiles-v1-17521740fe444636690d.json  cmakeFiles-v1-7785ad7da7e2ca642947.json  codemodel-v2-2736f12d016c40dfacd4.json  codemodel-v2-5777a0ef42b31a6f948f.json  codemodel-v2-933a5d6ce78fc06f5e99.json  codemodel-v2-c1d3135ba7377cd660af.json  directory-BlackEngine-1f70559b0da60ec5cd05.json  index-2023-11-02T12-38-50-0660.json  index-2023-11-27T13-20-31-0681.json  index-2023-11-27T13-45-15-0845.json  index-2023-11-28T13-47-44-0456.json  target-BlackEngine-4b3ecb15705c3c2d4880.json  target-BlackEngine-a8f90a9f506550c22b50.json  target-BlackEngine-d80b95f80af8039cd077.json  target-BlackEngine-e58d0a53882d694e8168.json  target-CopyDllToSandbox-b86da93c9636d81656e0.json  target-CopyDllToSandbox-d6b9a5b706e2a088e440.json  target-GeneratePrecompiledHeader-e317aa2d6decb6f298cb.json  target-Sandbox-1e656ad9386bd2803502.json  target-Sandbox-732d9030122d2be4e5cb.json  target-blkpch.h-6a6bdcd91e4dff6acd96.json  target-blkpch.h-e3fcbfceadd67ddbf842.json
BlackEngine/: BlackEngine.vcxproj  CMakeCache.txt  CMakeLists.txt  DaemonEngine.vcxproj.filters  Makefile  cmake_install.cmake
BlackEngine/Source/: BlackEngine.h
BlackEngine/Source/BlackEngine/: Core.cpp  Core.h  EntryPoint.h  Log.cpp  Log.h  Math.h  Mesh.h
BlackEngine/Source/BlackEngine/Logging/: Log.cpp  Log.h  Logger.cpp  Logger.h
BlackEngine/Source/DaemonEngine/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Log.h
BlackEngine/Source/DaemonEngine/Logging/: Logger.cpp
BlackEngine/src/: BlackEngine.h  blkpch.h
BlackEngine/src/BlackEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Mesh.h
BlackEngine/src/BlackEngine/Core/: MouseCode.h
BlackEngine/src/BlackEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
BlackEngine/src/BlackEngine/Logging/: Log.cpp  Log.h  Logger.cpp  Logger.h
BlackEngine/src/BlackEngine/Math/: Vector3D.h
BlackEngineTest/: BlackEngineTest[1]_include.cmake  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
BlackEngineTest/src/: main.cpp
BlackEngineTest/src/logging/: Logger_Test.cpp
DaemonEngine/: CMakeLists.txt  DaemonEngine.vcxproj  DaemonEngine.vcxproj.filters
DaemonEngine/Source/: Core.cpp  Core.h  DaemonEngine.h  Test.cpp  Test.h
DaemonEngine/Source/DaemonEngine/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Log.cpp  Log.h  Math.h  Mesh.h
DaemonEngine/Source/DaemonEngine/Logging/: Logger.cpp  Logger.h  Logger.test.h
Sandbox/: CMakeCache.txt  CMakeLists.txt  Makefile  Sandbox.vcxproj  cmake_install.cmake
Sandbox/Source/: Sandbox.h  main.cpp
Sandbox/src/: Sandbox.cpp  Sandbox.h
black_engine_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  black_engine_test[1]_include.cmake  cmake_install.cmake
black_engine_test/src/logging/: Logger_Test.cpp
daemon_engine_test/: CMakeLists.txt
daemon_engine_test/src/logging/: Logger_Test.cpp
